--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -1,1 +1,5 @@
-<p>asset-list-item works!</p>
+<div class="mx-2 mb-2">
+    <div class="border border=[var(--p-surface-500)] rounded-lg p-3 mx-2 bg-white">
+        Media / Assets
+    </div>
+</div>
