--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -6,7 +6,93 @@
             <p class="text-xl font-semibold">Assets Details</p>
         </div>
     </ng-template>
-    <div class="flex gap-3" [formGroup]="assetForm">
-        
+    <div class="flex flex-col md:flex-row gap-5 items-start w-full" [formGroup]="assetForm">
+        <div class="flex flex-col gap-4 w-full">
+            <p-divider [align]="'left'" type="solid"><b class="text-sm">Upload</b></p-divider>
+            <div class="flex gap-4 items-center w-full">
+                <p>Type:</p>
+                <p-selectbutton [options]="assetService.assetType()" formControlName="type" optionLabel="label" optionValue="value" />
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                <div class="col-span-1 md:col-span-4">
+                    <p-floatlabel variant="in">
+                        <input id="code" pInputText formControlName="code" 
+                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('code').invalid && formControl('code').touched }" showClear fluid />
+                        <label for="code">Code</label>
+                    </p-floatlabel>
+                </div>
+                <div class="col-span-1 md:col-span-8">
+                    <p-floatlabel variant="in">
+                        <input id="name" pInputText formControlName="name" 
+                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
+                        <label for="name">Name</label>
+                    </p-floatlabel>
+                </div>
+                @if (['web', 'widget'].includes(formControl('type').value)) {
+                    <div class="col-span-1 md:col-span-12">
+                        <p-floatlabel variant="in">
+                            <input id="link" pInputText formControlName="link" 
+                                [ngClass]="{ 'ng-invalid ng-dirty': formControl('link').invalid && formControl('link').touched }" fluid />
+                            <label for="link">Link</label>
+                        </p-floatlabel>
+                    </div>
+                }
+            </div>
+            <div class="mt-3">
+                <p-divider [align]="'left'" type="solid"><b class="text-sm">Asset Information</b></p-divider>
+                <div class="grid grid-cols-1 md:grid-cols-2 grid-flow-row gap-4 p-2 text-sm">
+                    <p>Size: <span class="font-semibold">{{ utils.formatSize(fileDetails?.value.size ?? 0) }}</span></p>
+                    <p>Type: <span class="font-semibold">{{ fileDetails?.value.type ?? 'N/A' }}</span></p>
+                    <p>Orientation: <span class="font-semibold">{{ fileDetails?.value.orientation ?? 'N/A' }}</span></p>
+                    <p>Resolution: <span class="font-semibold">{{ fileDetails?.value.resolution ?? 'N/A' }}</span></p>
+                </div>
+            </div>
+            <p-divider [align]="'left'" type="solid"><b class="text-sm">Audience Tag</b></p-divider>
+        </div>
+        <div class="w-full">
+            <p-fileupload 
+                [multiple]="false" 
+                [maxFileSize]="10000000" 
+                (onClear)="onClearFiles()" 
+                (onRemove)="onClearFiles()" 
+                (onUpload)="onClickUpload()" 
+                (onSelect)="onSelectedFiles($event)"
+            >
+                <ng-template #content let-files let-removeFileCallback="removeFileCallback">
+                    @if (files?.length > 0) {
+                        <div class="flex flex-wrap gap-4 h-[300px] overflow-y-auto">
+                            @for (file of files; track $index) {
+                                <div class="w-full relative flex justify-center">
+                                    @if (file.type.includes('image')) {
+                                        <img class="object-cover" role="presentation" [alt]="file.name" [src]="file.objectURL" width="100%" />
+                                    } @else if (file.type.includes('video')) {
+                                        <video class="object-cover" role="presentation" [src]="file.objectURL" width="100%"></video>
+                                    } @else {
+                                        <iframe [src]="file.objectURL" class="preview-frame"></iframe>
+
+                                    }
+                                </div>
+                            }
+                        </div>
+                    }
+                </ng-template>
+                <ng-template #file></ng-template>
+                <ng-template #empty>
+                    <div class="flex flex-col items-center justify-center mt-3">
+                        <i class="pi pi-cloud-upload !p-10 !text-7xl !text-[var(--p-surface-300)]"></i>
+                        <p class="mt-6 mb-0">Drag and drop files to here to upload.</p>
+                    </div>
+                </ng-template>
+            </p-fileupload>
+        </div>
     </div>
+    <ng-template #footer>
+        <div class="flex justify-start md:justify-end gap-3">
+            <!-- <p-button label="Cancel" severity="secondary" [routerLink]="['/screens/screen-registration']" /> -->
+            <p-button label="Register Screen" (onClick)="onClickSave($event)" />
+        </div>
+    </ng-template>
 </p-card>
+
+<p-toast />
+<p-confirmdialog />
