--- a/vcastplay-cms/src/app/components/playlist/timeline-item/timeline-item.component.html
+++ b/vcastplay-cms/src/app/components/playlist/timeline-item/timeline-item.component.html
@@ -1,21 +1,46 @@
-<div 
-    class="timeline-item" 
-    [style.left.px]="item.position * zoomLevel" 
-    [style.width.px]="item.duration * zoomLevel" 
-    cdkDrag 
-    (cdkDragEnded)="onDragEnded($event, item)"
-    (cdkDragStarted)="onDragStarted(item)"
->
-    <!-- Left Resize Handle -->
-    <div class="resize-handle left" (mousedown)="startResizing($event, item, 'left')"></div>
-
-    <!-- Content -->
-    <div class="item-label h-100" cdkDragHandle>
-        {{ item.name }}<br />
-        {{ formatTime(item.position) }} - {{ formatTime(item.position + item.duration) }}
+<div class="relative w-[160px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group rounded-lg"
+    [ngClass]="{ 'shadow-lg shadow-[var(--p-primary-800)]': currentPlaying() }">
+    <div class="absolute top-0 right-0 p-2 h-full w-full">
+        <div class="flex items-center justify-center h-full gap-2 hidden group-hover:flex bg-gray-300">
+            <p-button severity="info" icon="pi pi-cog" pTooltip="Configuration" tooltipPosition="bottom" (onClick)="showConfig.set(true)" />
+            <p-button severity="danger" icon="pi pi-trash" pTooltip="Remove" tooltipPosition="bottom" (onClick)="onClickRemove(asset)" text />
+        </div>
     </div>
-
-    <!-- Right Resize Handle -->
-    <div class="resize-handle right" (mousedown)="startResizing($event, item, 'right')"></div>
-
+    <div class="text-left text-xs flex flex-col">
+        <p>{{ asset.name }}</p> 
+        <p>{{ asset.code }}</p>
+    </div>
 </div>
+
+<p-dialog [(visible)]="showConfig" [modal]="true" [draggable]="false" [resizable]="false" (onHide)="showConfig.set(false)">
+    <ng-template #header>
+        <div class="inline-flex items-center gap-2"><i class="pi pi-cog"></i> <span>Configuration</span></div>
+    </ng-template>
+    <div class="p-3 border border-[var(--p-surface-300)] rounded-lg h-[50vh] md:h-[50vh] md:w-[50vw] flex justify-center items-center">
+        @switch (asset.type) {
+            @case('video') {
+                Preview Video
+            } @case('image') {
+                Preview Image
+            } @case('audio') {
+                Preview Audio
+            } @case('widget') {
+                Preview Widget
+            } @case('web') {
+                Preview Web Page
+            } @case('text') {
+                Preview Text
+            }
+        }
+    </div>
+    <div class="mt-3 flex gap-2 items-center justify-between">
+        <p class="font-semibold">Set Duration:</p>
+        <p-inputnumber [(ngModel)]="asset.duration" [useGrouping]="false" />
+    </div>
+    <ng-template #footer>
+        <div class="float-right flex gap-3">
+            <p-button label="Cancel" severity="secondary" (onClick)="showConfig.set(false)" />
+            <p-button label="Save" (onClick)="showConfig.set(false)" />
+        </div>
+    </ng-template>
+</p-dialog>
