--- a/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
@@ -1,1 +1,13 @@
-<p>asset-list works!</p>
+<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+<p-card>
+    <ng-template #title>
+        <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
+            <app-filters class="w-full md:w-[25rem]"></app-filters>
+            <div class="flex gap-4">
+                <p-button (onClick)="onClickAddNew()" label="Upload Assets" icon="pi pi-plus"></p-button>
+                <!-- <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
+                <p-button [label]="!isMobile ? 'Download' : ''" variant="outlined" icon="pi pi-download" [text]="isMobile" /> -->
+            </div>
+        </div>
+    </ng-template>
+</p-card>
