--- a/vcastplay-cms/src/app/components/playlist/timeline-container/timeline-container.component.html
+++ b/vcastplay-cms/src/app/components/playlist/timeline-container/timeline-container.component.html
@@ -1,10 +1,11 @@
 <div class="timeline-container p-3">
-    <div class="flex gap-4 h-full" cdkDropList (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
+    <div class="flex gap-4 h-full" cdkDropList [cdkDropListData]="contents?.value" (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
         @for (item of contents?.value; track $index) {
             <app-timeline-item [asset]="item" />
+            <div *cdkDragPlaceholder></div>
         } @empty {
             <div class="flex items-center justify-center h-full absolute top-0 left-0 w-full">
-                <p class="text-gray-400 italic">Drop items here</p>
+                <p class="text-gray-400 italic">Drop contents here</p>
             </div>
         }
     </div>
