--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -1,14 +1,14 @@
-<div class="mx-1 mb-2" cdkDrag [cdkDragData]="asset">
-    <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg p-3 mx-2 bg-white">
-        <h4 class="font-semibold">{{ asset.name }}</h4>
-        <p class="text-sm">{{ asset.code }}</p>
-    </div>
-    <ng-template cdkDragPlaceholder>
-        <div class="w-[160px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group rounded-lg">
-            <div class="text-left text-xs flex flex-col">
-                <p>{{ asset.name }}</p> 
-                <p>{{ asset.code }}</p>
-            </div>
+<div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg p-3 shadow shadow-lg
+    bg-[var(--p-surface-300)] hover:bg-[var(--p-surface-200)] w-full" cdkDrag [cdkDragData]="asset">
+    <h4 class="font-semibold text-sm">{{ asset.name }}</h4>
+    <p class="text-sm">{{ asset.code }}</p>
+
+    <div class="outline-dashed outline-2 outline-offset-2 outline-gray-400 h-full w-30" *cdkDragPlaceholder></div>
+
+    <div *cdkDragPreview>
+        <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg p-3 bg-[var(--p-surface-300)] h-20 w-50">
+            <h4 class="font-semibold text-sm">{{ asset.name }}</h4>
+            <p class="text-sm">{{ asset.code }}</p>
         </div>
-    </ng-template>
+    </div>
 </div>
