--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -32,22 +32,28 @@
 
                 <!-- Preview Contents -->
                 <div class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg">
-                    <div class="relative flex h-80 md:h-full w-full justify-center items-center">
-                        @switch (currentContent?.type) {
-                            @case ('video') {
-                                <video #videoPlayer class="object-cover border-none h-full w-[50%]" [src]="currentContent?.link | safeurl" 
-                                    (timeupdate)="onTimeUpdate($event)" [autoplay]="isPlaying()"></video>
-                            }
-                            @case ('web') {
-                                <iframe class="object-contain border-none h-full" [src]="currentContent?.link | safeurl"></iframe>
-                            }
-                            @case ('image') {
-                                <img class="object-cover h-full w-[50%]" [src]="currentContent?.link | safeurl" alt="preview image">
-                            }
-                            @default {
-                                {{ currentContent?.name ?? 'Preview Content'}}
-                            }
-                        }
+                    <div class="flex h-80 md:h-full w-full justify-center items-center">
+                        <div class="transition-all duration-{{currentTransition?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
+                            <ng-container *ngIf="playlistService.currentContent() as currentContent">
+                                @switch (currentContent?.type) {
+                                    @case ('video') {
+                                        <video #videoPlayer class="object-cover border-none h-full w-[50%]" [src]="currentContent?.link | safeurl" 
+                                            (timeupdate)="onTimeUpdate($event)" [autoplay]="isPlaying()"></video>
+                                    }
+                                    @case ('web') {
+                                        <iframe class="object-contain border-none h-full" [src]="currentContent?.link | safeurl"></iframe>
+                                    }
+                                    @case ('image') {
+                                        <img class="object-cover h-full w-[50%]" [src]="currentContent?.link | safeurl" alt="preview image">
+                                    }
+                                    @default {
+                                        <div class="h-full w-full flex justify-center items-center">
+                                            {{ currentContent?.name ?? 'Preview Content'}}
+                                        </div>
+                                    }
+                                }
+                            </ng-container>
+                        </div>
                     </div>
                     <div class="absolute bottom-0 z-50 flex opacity-0 translate-y-2 transition-all duration-300 
                         group-hover:opacity-100 group-hover:translate-y-0 w-full bg-[var(--p-surface-300)]">
@@ -65,20 +71,27 @@
             </div>
             <div class="col-span-1 md:col-span-6 xl:col-span-4">
                 <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg h-full">
-                    <div class="p-3">
+                    <div class="p-3 flex items-center gap-2">
                         <p-inputgroup>
                             <input type="text" pInputText [formControl]="keywords" placeholder="Search" />
                             <p-inputgroup-addon>
                                 <p-button pTooltip="Filter" tooltipPosition="bottom" icon="pi pi-filter" />
                             </p-inputgroup-addon>
                         </p-inputgroup>
+                        <p-selectbutton [options]="assetViewModes" [formControl]="assetViewMode" optionLabel="label" optionValue="label" [allowEmpty]="false">
+                            <ng-template #item let-item>
+                                <i [class]="item.icon" [pTooltip]="item.label" tooltipPosition="bottom"></i>
+                            </ng-template>
+                        </p-selectbutton>
                     </div>
-                    <div class="flex-1 overflow-y-auto cursor-grab">
-                        <div class="h-50" cdkDropList [cdkDropListData]="assets()" cdkDragPreviewContainer="parent">
+                    <div class="relative flex-1 overflow-y-auto cursor-grab" 
+                        cdkDropList [cdkDropListData]="assets()" cdkDragPreviewContainer="parent" cdkDropListOrientation="horizontal">
+                        <div class="px-3 pb-2 h-50"  [ngClass]="{ 
+                            'grid grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
+                            'flex flex-col gap-2': assetViewModeSignal() == 'List'
+                        }">
                             @for (item of filteredAssets(); track $index) {
-                                <div class="flex items-center relative">
-                                    <app-asset-list-item class="w-full" [asset]="item" />
-                                </div>
+                                <app-asset-list-item class="w-full h-full" [asset]="item" />
                             } @empty {
                                 <div class="flex items-center justify-center h-full w-full">
                                     <p class="text-gray-400 italic">No items found</p>
@@ -90,18 +103,32 @@
             </div>
         </div>
         <ng-template #footer>
+            <div class="grid grid-rows-2 md:flex w-full items-center gap-2 py-2">
+                <div class="flex items-center gap-2">
+                    <p-checkbox formControlName="loop" inputId="loop" binary />
+                    <label for="loop" class="text-sm">Loop Video</label>
+                </div>
+                <div class="flex items-center gap-4" formGroupName="transition">
+                    <div class="flex items-center gap-2">
+                        <p-checkbox formControlName="hasGap" inputId="hasGap" binary />
+                        <label for="hasGap" class="text-sm">Black Gap</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <p-select placeholder="Transition" formControlName="type" size="small" optionLabel="label" 
+                            optionValue="transition" [options]="transitionTypes" showClear />
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <label for="speed" class="text-sm">Transition Speed:</label>
+                        <p-inputnumber formControlName="speed" size="small" inputId="speed" placeholder="Speed" [useGrouping]="false" [inputStyle]="{ width: '5rem' }" />
+                    </div>
+                </div>
+                @if (totalDuration() > 0) {
+                    <div class="md:ml-auto"><p-button severity="danger" label="Clear All" (onClick)="onClickClearAll()" size="small" /></div>
+                }
+            </div>
             <app-timeline-container [playListForm]="playListForm" />
             <div class="flex w-full justify-between items-center mt-2">
-                <div class="flex items-center gap-2">
-                    <p-tag severity="info" [value]="'Duration: ' + utils.timeConversion(totalDuration())" />
-                    <div class="flex items-center gap-2">
-                        <p-checkbox formControlName="loop" inputId="loop" size="small" binary />
-                        <label for="loop" class="mt-2 text-sm">Loop Video</label>
-                    </div>
-                    @if (totalDuration() > 0) {
-                        <p-button severity="danger" label="Clear All" size="small" (onClick)="onClickClearAll()" text />
-                    }
-                </div>
+                <p-tag severity="info" [value]="'Duration: ' + utils.timeConversion(totalDuration())" />
                 <p class="italic text-sm text-red-400">Hold Shift + Mouse Wheel to scroll</p>
             </div>
         </ng-template>
