--- a/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.scss
+++ b/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.scss
@@ -1,4 +1,4 @@
-.timeline-container {
+.playlist-container {
     position: relative;
     border: 1px solid var(--p-surface-300);
     background: var(--color-gray-100);
