--- a/vcastplay-cms/src/app/pages/playlist/playlist-list/playlist-list.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-list/playlist-list.component.html
@@ -1,13 +1,15 @@
-<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-<p-card>
-    <ng-template #title>
-        <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
-            <app-filters class="w-full md:w-[25rem]"></app-filters>
-            <div class="flex gap-4">
-                <p-button (onClick)="onClickAddNew()" label="New Playlist" icon="pi pi-plus"></p-button>
-                <!-- <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
-                <p-button [label]="!isMobile ? 'Download' : ''" variant="outlined" icon="pi pi-download" [text]="isMobile" /> -->
+<div class="flex flex-col gap-4 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+    <p-card styleClass="h-full" class="flex-1">
+        <ng-template #title>
+            <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
+                <app-filters class="w-full md:w-[25rem]"></app-filters>
+                <div class="flex gap-4">
+                    <p-button (onClick)="onClickAddNew()" label="New Playlist" icon="pi pi-plus"></p-button>
+                    <!-- <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
+                    <p-button [label]="!isMobile ? 'Download' : ''" variant="outlined" icon="pi pi-download" [text]="isMobile" /> -->
+                </div>
             </div>
-        </div>
-    </ng-template>
-</p-card>
+        </ng-template>
+    </p-card>
+</div>
