--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -1,98 +1,115 @@
-<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-<p-card>
-    <ng-template #title>
-        <div class="flex items-center gap-4">
-            <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
-            <p class="text-xl font-semibold">Assets Details</p>
-        </div>
-    </ng-template>
-    <div class="flex flex-col md:flex-row gap-5 items-start w-full" [formGroup]="assetForm">
-        <div class="flex flex-col gap-4 w-full">
-            <p-divider [align]="'left'" type="solid"><b class="text-sm">Upload</b></p-divider>
-            <div class="flex gap-4 items-center w-full">
-                <p>Type:</p>
-                <p-selectbutton [options]="assetService.assetType()" formControlName="type" optionLabel="label" optionValue="value" />
+<div class="flex flex-col gap-1 h-full relative">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+
+    <p-card styleClass="h-full" class="flex-1">
+        <ng-template #title>
+            <div class="flex items-center gap-4">
+                <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
+                <p class="text-xl font-semibold">Assets Details</p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
-                <div class="col-span-1 md:col-span-4">
+        </ng-template>
+        <div class="grid grid-cols-1 md:grid-cols-12 gap-4 pt-3 h-full" [formGroup]="assetForm">
+            <div class="col-span-1 md:col-span-5 flex flex-col gap-2">
+                <div class="flex flex-col gap-5">
                     <p-floatlabel variant="in">
                         <input id="code" pInputText formControlName="code" 
-                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('code').invalid && formControl('code').touched }" showClear fluid />
+                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('code').invalid && formControl('code').touched }" fluid />
                         <label for="code">Code</label>
                     </p-floatlabel>
-                </div>
-                <div class="col-span-1 md:col-span-8">
                     <p-floatlabel variant="in">
                         <input id="name" pInputText formControlName="name" 
                             [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
                         <label for="name">Name</label>
                     </p-floatlabel>
-                </div>
-                @if (['web', 'widget'].includes(formControl('type').value)) {
-                    <div class="col-span-1 md:col-span-12">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
                         <p-floatlabel variant="in">
-                            <input id="link" pInputText formControlName="link" 
-                                [ngClass]="{ 'ng-invalid ng-dirty': formControl('link').invalid && formControl('link').touched }" fluid />
-                            <label for="link">Link</label>
+                            <p-select id="type" [options]="assetService.filterCategory()" optionLabel="label" optionValue="value" formControlName="category" showClear fluid />
+                            <label for="type">Category</label>
+                        </p-floatlabel>
+                        <p-floatlabel variant="in">
+                            <p-select id="type" [options]="assetService.filterCategory()" optionLabel="label" optionValue="value" formControlName="subCategory" showClear fluid />
+                            <label for="type">Sub Category</label>
                         </p-floatlabel>
                     </div>
-                }
-            </div>
-            <div class="mt-3">
-                <p-divider [align]="'left'" type="solid"><b class="text-sm">Asset Information</b></p-divider>
-                <div class="grid grid-cols-1 md:grid-cols-2 grid-flow-row gap-4 p-2 text-sm">
-                    <p>Size: <span class="font-semibold">{{ utils.formatSize(fileDetails?.value.size ?? 0) }}</span></p>
-                    <p>Type: <span class="font-semibold">{{ fileDetails?.value.type ?? 'N/A' }}</span></p>
-                    <p>Orientation: <span class="font-semibold">{{ fileDetails?.value.orientation ?? 'N/A' }}</span></p>
-                    <p>Resolution: <span class="font-semibold">{{ fileDetails?.value.resolution ?? 'N/A' }}</span></p>
+                </div>
+                <div class="flex-1 overflow-auto">
+                    <p-tabs [value]="0">
+                        <p-tablist>
+                            <p-tab [value]="0">Availability</p-tab>
+                            <p-tab [value]="1">Audience Tags</p-tab>
+                        </p-tablist>
+                        <p-tabpanels>
+                            <p-tabpanel [value]="0">
+                                <div class="flex flex-col gap-4">
+                                    <div class="grid grid-cols-1 md:grid-cols-2 gap-3" formGroupName="dateRange">
+                                        <p-datepicker formControlName="start" placeholder="Start Date" [showIcon]="true" [showOnFocus]="false" appendTo="body" fluid />
+                                        <p-datepicker formControlName="end" placeholder="End Date" [showIcon]="true" [showOnFocus]="false" appendTo="body" fluid />
+                                    </div>
+                                    <div class="flex flex-col gap-4 h-[calc(100vh-600px)] overflow-y-auto p-5" formArrayName="availability">
+                                        @for (item of availability.controls; track $index) {
+                                            <div class="flex justify-between gap-3 w-full" [formGroupName]="$index">
+                                                <div class="flex gap-2 items-center">
+                                                    <p-checkbox [id]="weekdays[$index]" binary="true" formControlName="selected" />
+                                                    <label [for]="weekdays[$index]">{{ weekdays[$index] }}</label>
+                                                </div>
+
+                                                <p-datepicker formControlName="hour" [timeOnly]="true" appendTo="body" 
+                                                    [iconDisplay]="'input'" placeholder="Hour" hourFormat="12" showButtonBar showIcon>
+                                                    <ng-template #inputicon let-clickCallBack="clickCallBack">
+                                                        <i class="pi pi-clock" (click)="clickCallBack($event)"></i>
+                                                    </ng-template>
+                                                </p-datepicker>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </p-tabpanel>
+                            <p-tabpanel [value]="1">
+                                Audience
+                            </p-tabpanel>
+                        </p-tabpanels>
+                    </p-tabs>
                 </div>
             </div>
-            <p-divider [align]="'left'" type="solid"><b class="text-sm">Audience Tag</b></p-divider>
-        </div>
-        <div class="w-full">
-            <p-fileupload 
-                [multiple]="false" 
-                [maxFileSize]="10000000" 
-                (onClear)="onClearFiles()" 
-                (onRemove)="onClearFiles()" 
-                (onUpload)="onClickUpload()" 
-                (onSelect)="onSelectedFiles($event)"
-            >
-                <ng-template #content let-files let-removeFileCallback="removeFileCallback">
-                    @if (files?.length > 0) {
-                        <div class="flex flex-wrap gap-4 h-[300px] overflow-y-auto">
-                            @for (file of files; track $index) {
-                                <div class="w-full relative flex justify-center">
-                                    @if (file.type.includes('image')) {
-                                        <img class="object-cover" role="presentation" [alt]="file.name" [src]="file.objectURL" width="100%" />
-                                    } @else if (file.type.includes('video')) {
-                                        <video class="object-cover" role="presentation" [src]="file.objectURL" width="100%"></video>
-                                    } @else {
-                                        <iframe [src]="file.objectURL" class="preview-frame"></iframe>
-
-                                    }
-                                </div>
-                            }
-                        </div>
-                    }
-                </ng-template>
-                <ng-template #file></ng-template>
-                <ng-template #empty>
-                    <div class="flex flex-col items-center justify-center mt-3">
-                        <i class="pi pi-cloud-upload !p-10 !text-7xl !text-[var(--p-surface-300)]"></i>
-                        <p class="mt-6 mb-0">Drag and drop files to here to upload.</p>
+            <div class="col-span-1 md:col-span-7">
+                <div class="flex flex-col gap-4 h-full">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2 items-center">
+                        <p-floatlabel variant="in">
+                            <p-select id="type" [options]="assetTypes()" optionLabel="label" optionValue="value" formControlName="type" fluid />
+                            <label for="type">Type</label>
+                        </p-floatlabel>
+                        @if (showLinkInput()) {
+                            <p-floatlabel variant="in">
+                                <input id="link" pInputText formControlName="link" 
+                                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('link').invalid && formControl('link').touched }" fluid />
+                                <label for="link">Link</label>
+                            </p-floatlabel>
+                        } @else {
+                            <p-button styleClass="w-full" (onClick)="fileInput.click()" label="Upload" icon="pi pi-upload" />
+                            <input #fileInput type="file" [accept]="currentFileType() + '/*'" hidden (change)="onFileSelected($event)" [multiple]="false" />
+                        }
                     </div>
-                </ng-template>
-            </p-fileupload>
+                    <div class="flex items-center justify-center border-2 border-dashed border-gray-400 rounded-lg h-[340px] overflow-y-auto">
+                        <ng-container *ngIf="formControl('link').value as currentContent">
+                            <app-preview-content [currentContent]="{ link: formControl('link').value, type: formControl('type').value }" [showControls]="true" />
+                        </ng-container>
+                    </div>
+                    <div class="flex items-center gap-4">
+                        <label for="duration">Duration:</label>
+                        <p-inputnumber formControlName="duration" inputId="duration" [min]="0"
+                            placeholder="Duration" [useGrouping]="false" [inputStyle]="{ width: '8rem' }" showButtons />
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <ng-template #footer>
-        <div class="flex justify-start md:justify-end gap-3">
-            <!-- <p-button label="Cancel" severity="secondary" [routerLink]="['/screens/screen-registration']" /> -->
-            <p-button label="Register Screen" (onClick)="onClickSave($event)" />
-        </div>
-    </ng-template>
-</p-card>
+        <ng-template #footer>
+            <div class="flex justify-end gap-2">
+                <p-button (onClick)="onClickCancel()" label="Cancel" text />
+                <p-button (onClick)="onClickSave($event)" label="Save" />
+            </div>
+        </ng-template>
+    </p-card>
+</div>
 
 <p-toast />
 <p-confirmdialog />
