--- a/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
@@ -1,13 +1,84 @@
-<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-<p-card>
-    <ng-template #title>
-        <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
-            <app-filters class="w-full md:w-[25rem]"></app-filters>
-            <div class="flex gap-4">
-                <p-button (onClick)="onClickAddNew()" label="Upload Assets" icon="pi pi-plus"></p-button>
-                <!-- <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
-                <p-button [label]="!isMobile ? 'Download' : ''" variant="outlined" icon="pi pi-download" [text]="isMobile" /> -->
+<div class="flex flex-col gap-4 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+    <p-card styleClass="h-full" class="flex-1">
+        <ng-template #title>
+            <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
+                <app-filters class="w-full md:w-[25rem]"></app-filters>
+                <div class="flex gap-4">
+                    <p-button (onClick)="onClickAddNew()" label="Upload" icon="pi pi-plus"></p-button>
+                    <!-- <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
+                    <p-button [label]="!isMobile ? 'Download' : ''" variant="outlined" icon="pi pi-download" [text]="isMobile" /> -->
+                </div>
             </div>
+        </ng-template>
+        
+        <div class="flex-1 md:h-full">
+            <p-table
+                class="hidden lg:block" 
+                [value]="assetService.loadingSignal() ? utils.tableSkeletonRows : filteredAssets()" 
+                selectionMode="single"
+                [scrollable]="true" 
+                size="small"  
+                stripedRows
+            >
+                <ng-template #header>
+                    <tr>
+                        <th>Preview</th>
+                        <th>Code</th>
+                        <th>Name</th>
+                        <th>Type</th>
+                        <th>Category & Subcategory</th>
+                        <th>Last Update</th>
+                        <th>Actions</th>
+                    </tr>
+                </ng-template>
+                <ng-template #body let-item>
+                    <tr>
+                        <td>Preview</td>
+                        <td>{{ item.code }}</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.type }}</td>
+                        <td>{{ item.category }} & {{ item.subCategory }}</td>
+                        <td>{{ item.updatedOn | date: 'mediumDate' }}</td>
+                        <td class="flex flex-row">
+                            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                        </td>
+                    </tr>
+                </ng-template>
+                <ng-template #emptymessage>
+                    <tr>
+                        <td colspan="9" [height]="20">
+                            <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <!-- <div class="block lg:hidden flex flex-col gap-4">
+                @if (!screenService.loadingSignal()) {
+                    @for (item of filteredScreen(); track $index) {
+                        <app-screen-list-item [screen]="item" [actionBtn]="actionBtn" />
+                    } @empty {
+                        <div class="flex justify-center items-center p-5 h-100">
+                            <p>No screend found</p>
+                        </div>
+                    }
+                } @else {
+                    @for (item of utils.tableSkeletonRows; track $index) {
+                        <p-skeleton height="5rem" />
+                    }
+                }
+            </div> -->
         </div>
-    </ng-template>
-</p-card>
+        <ng-template #footer>
+            <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
+        </ng-template>
+    </p-card>
+</div>
+
+<ng-template #actionBtn let-item>
+    <p-button (onClick)="onClickEdit(item)" pTooltip="Edit" tooltipPosition="bottom" icon="pi pi-pencil" [text]="true" [rounded]="true" severity="success" />
+    <p-button (onClick)="onClickDelete(item, $event)" pTooltip="Delete" tooltipPosition="bottom" icon="pi pi-trash" [text]="true" [rounded]="true" severity="danger" />
+</ng-template>
+
+<p-toast />
+<p-confirmdialog />
