--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-2 h-full relative">
+<div class="flex flex-col gap-1 h-full relative">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
     <p-card styleClass="h-full" class="flex-1" [formGroup]="playListForm" cdkDropListGroup>
         <ng-template #title>
@@ -35,23 +35,8 @@
                     <div class="flex h-80 md:h-full w-full justify-center items-center">
                         <div class="transition-all duration-{{currentTransition?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
                             <ng-container *ngIf="playlistService.currentContent() as currentContent">
-                                @switch (currentContent?.type) {
-                                    @case ('video') {
-                                        <video #videoPlayer class="object-cover border-none h-full w-[50%]" [src]="currentContent?.link | safeurl" 
-                                            (timeupdate)="onTimeUpdate($event)" [autoplay]="isPlaying()"></video>
-                                    }
-                                    @case ('web') {
-                                        <iframe class="object-contain border-none h-full" [src]="currentContent?.link | safeurl"></iframe>
-                                    }
-                                    @case ('image') {
-                                        <img class="object-cover h-full w-[50%]" [src]="currentContent?.link | safeurl" alt="preview image">
-                                    }
-                                    @default {
-                                        <div class="h-full w-full flex justify-center items-center">
-                                            {{ currentContent?.name ?? 'Preview Content'}}
-                                        </div>
-                                    }
-                                }
+                                <app-preview-content class="flex items-center justify-center h-full" [currentContent]="currentContent" 
+                                    [isPlaying]="isPlaying()" (timeUpdate)="onTimeUpdate($event)" />
                             </ng-container>
                         </div>
                     </div>
@@ -129,7 +114,7 @@
                     <div class="md:ml-auto"><p-button severity="danger" label="Clear All" (onClick)="onClickClearAll()" size="small" /></div>
                 }
             </div>
-            <app-timeline-container [playListForm]="playListForm" />
+            <app-playlist-container [playListForm]="playListForm" />
             <div class="flex w-full justify-between items-center mt-2">
                 <p-tag severity="info" [value]="'Duration: ' + utils.timeConversion(totalDuration())" />
                 <p class="italic text-sm text-red-400">Hold Shift + Mouse Wheel to scroll</p>
